# chimera-rps

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  pytest.ini
.github/workflows/: run-tests.yml
docs/source/: conf.py  index.rst
docs/source/dev/: environment.rst
docs/source/reference/: client.rst  game.rst  message-format.rst
example-clients/connectm/: bot.py  gui.py  tui.py
example-clients/rock_paper_scissors/: tui.py
example-clients/rps_web/: index.html  rps.css  rps.js
example-clients/rps_web/games/: play.html  rps-game-playing.js  rps.css  rps.html  rps_table.js
src/chimera/: decorators.py  exceptions.py
src/chimera/backend/: cli.py  fake.py  server.py  websocket.py
src/chimera/client/: __init__.py  api.py  connectors.py
src/chimera/common/: __init__.py  utils.py
src/chimera/examples/: chicken.py  connectm.py  p1wins.py  rock_paper_scissors.py
tests/: __init__.py
tests/backend/: test_chicken.py  test_create_match.py  test_errors.py  test_game_action.py  test_join_match.py  test_list_games.py  test_notifications.py  test_ws.py
tests/client/: test_create_match.py  test_game_action.py  test_join_match.py  test_list_games.py  test_notifications.py  test_ws.py
tests/common/: fixtures.py  utils.py
tests/scripts/: msg2md.py
