[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chimera"
version = "0.1"
authors = [
  { name="University of Chicago - Department of Computer Science", email="borja@cs.uchicago.edu" },
]
description = "Chimera"
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "click==8.1.3",
    "click_loglevel==0.4.0.post1",
    "coolname==2.1.0",
    "mypy==1.0.1",
    "pytest==7.2.0",
    "pytest-asyncio==0.20.3",
    "pytest-unordered==0.5.2",
    "websockets==10.4"
]

classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: BSD License',
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "sphinx==6.1.3",
    "sphinx-rtd-theme==1.2.0",
]

example-clients = [
    "pygame==2.1.2",
    "colorama==0.4.6",
    "types-colorama==0.4.15.7"
]

[project.scripts]
chimera-server = "chimera.backend.cli:cmd"

[project.urls]
"Homepage" = "https://github.com/uchicago-cs/chimera"
"Bug Tracker" = "https://github.com/uchicago-cs/chimera/issues"